Added new projects

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Projects — Sourav Das</title>
 
     <meta name="author" content="Sourav Das" />
-    <meta name="description" content="Selected projects by Sourav Das: Calendar app, AI semantic search, and SF Airbnb listings." />
+    <meta name="description" content="Selected projects by Sourav Das: Grill &amp; Go ordering app, LostNFound platform, calendar app, AI semantic search, and SF Airbnb listings." />
     <link rel="icon" href="./assets/icons/favicon-32.png" sizes="32x32" type="image/png" />
     <link rel="icon" href="./assets/icons/favicon-16.png" sizes="16x16" type="image/png" />
     <link rel="apple-touch-icon" href="./assets/icons/sourav_icon.png" />
@@ -27,7 +27,49 @@
         </div>
       </section>
 
-      <!-- Band 1: Image left, text right -->
+      <!-- Band 1: Grill &amp; Go -->
+      <section class="project-band">
+        <a class="project-row" href="https://github.com/Sourav-02121996/Project2_Grill_and_Go" target="_blank" rel="noopener">
+          <div class="project-media">
+            <img src="./assets/images/Grill_n_Go.png" alt="Grill &amp; Go sandwich shop app screens" />
+          </div>
+          <div class="project-text">
+            <h2 class="display-6 fw-semibold mb-2">Grill &amp; Go</h2>
+            <p class="lead mb-3">
+              Full-stack app for a sandwich shop pairing a static frontend with an Express API layer backed by MongoDB.
+            </p>
+            <ul class="mb-3">
+              <li>Menu, orders, promotions, and employees via REST APIs</li>
+              <li>Customer authentication with persistent profiles</li>
+              <li>Modern UI with admin and shopper flows</li>
+            </ul>
+            <span class="project-cta">View on GitHub →</span>
+          </div>
+        </a>
+      </section>
+
+      <!-- Band 2: LostNFound -->
+      <section class="project-band">
+        <a class="project-row project-row--reverse" href="https://github.com/Sourav-02121996/Project_3_LostNFound" target="_blank" rel="noopener">
+          <div class="project-text">
+            <h2 class="display-6 fw-semibold mb-2">LostNFound</h2>
+            <p class="lead mb-3">
+              Full-stack platform for Northeastern community to report, browse, and reclaim lost items from a unified dashboard.
+            </p>
+            <ul class="mb-3">
+              <li>Post new finds with photos and details</li>
+              <li>Search and filter active listings</li>
+              <li>Profile dashboard to manage submissions</li>
+            </ul>
+            <span class="project-cta">View on GitHub →</span>
+          </div>
+          <div class="project-media">
+            <img src="./assets/images/LostNFound.png" alt="LostNFound lost and found portal interface" />
+          </div>
+        </a>
+      </section>
+
+      <!-- Band 3: Calendar Application -->
       <section class="project-band">
         <a class="project-row" href="https://github.com/Sourav-02121996/calendar_application" target="_blank" rel="noopener">
           <div class="project-media">
@@ -48,7 +90,7 @@
         </a>
       </section>
 
-      <!-- Band 2: Text left, image right -->
+      <!-- Band 4: AI Semantic Search -->
       <section class="project-band">
         <a class="project-row project-row--reverse" href="https://github.com/Sourav-02121996/aiSemanticSearch" target="_blank" rel="noopener">
           <div class="project-text">
@@ -69,7 +111,7 @@
         </a>
       </section>
 
-      <!-- Band 3: Image left, text right -->
+      <!-- Band 5: SF Airbnb Listings -->
       <section class="project-band">
         <a class="project-row" href="https://github.com/Sourav-02121996/Sf_Airbnb_Listings" target="_blank" rel="noopener">
           <div class="project-media">
