Updated the skill section

--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <h3 class="h6">Languages</h3>
-              <p class="mb-0">Python, Java, C++, C# (plus: SAP ABAP, SQL)</p>
+              <p class="mb-0"> Python, SAP ABAP, Java, C++, SQL, Go (basic proficiency)</p>
             </div>
             <div class="col-md-6">
               <h3 class="h6">Backend / Systems</h3>
@@ -131,13 +131,19 @@
             <div class="col-md-6">
               <h3 class="h6">Web Technologies</h3>
               <p class="mb-0">
-                HTML, CSS, JavaScript, Django, React, Node.js, JSON/HTTP
+                HTML, CSS, JavaScript, Django, React.js, Express.js, Node.js, JSON/HTTP
+              </p>
+            </div>
+            <div class="col-md-6">
+              <h3 class="h6">Data / ML</h3>
+              <p class="mb-0">
+                Pandas, NumPy, scikit-learn, XGBoost, Regression / Tree-based models, EDA, Metrics
               </p>
             </div>
             <div class="col-md-6">
               <h3 class="h6">Tools & Platforms</h3>
               <p class="mb-0">
-                AWS (EC2, S3, Lambda), Google Cloud, Docker, Git, PostgreSQL
+                GitHub, Git CLI, MySQL, Google Cloud, Docker, PostgreSQL, AWS (EC2, S3, Lambda)
               </p>
             </div>
             <div class="col-md-6">
@@ -147,8 +153,8 @@
             <div class="col-md-6">
               <h3 class="h6">Concepts</h3>
               <p class="mb-0">
-                Data Structures, Algorithms, OOP, MVC, SDLC, SOLID Principles,
-                Distributed Systems, GUI Design
+                Data Structures, Algorithms, Object-Oriented Programming (OOP), MVC Architecture,
+                Software Development Life Cycle, SOLID Design Principles, Distributed Systems, GUI Design
               </p>
             </div>
           </div>
